// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-pagination-item renders component 1`] = `
<wpp-pagination-item class="pagination-item-wrapper wpp-pagination-item" exportparts="number" number="{1}" tabindex="0">
  <mock:shadow-root>
    <wpp-typography part="number" type="s-body">
      NaN
    </wpp-typography>
  </mock:shadow-root>
</wpp-pagination-item>
`;

exports[`wpp-pagination-item renders component with selected class and number 2 1`] = `
<wpp-pagination-item class="pagination-item-wrapper selected wpp-pagination-item" exportparts="number" number="{2}" selected="" tabindex="0">
  <mock:shadow-root>
    <wpp-typography part="number" type="s-body">
      NaN
    </wpp-typography>
  </mock:shadow-root>
</wpp-pagination-item>
`;
